2015-07-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* run gnulib-tool --add-import --no-libtool
	* configure.ac (LT_INIT): Remove.
	* info/Makefile.am,
	install-info/Makefile.am: Change Gnulib library file from 
	libgnu.la to libgnu.a.
	* autogen.sh: Remove use of libtoolize.

	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Refer to gnulib 
	files in subdirectory.
	* tp/Texinfo/Convert/XSParagraph/configure.ac: Run gl_EARLY and 
	gl_INIT.
	* tp/Texinfo/Convert/XSParagraph: Run
	gnulib-tool --libtool --import vasprintf.

2015-07-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	tp/Texinfo/Convert/XSParagraph/mylib/xspara.c,
	tp/Texinfo/Convert/XSParagraph/mylib/text.c: Add
	an "#include <config.h>" line.
	* tp/Texinfo/Convert/XSParagraph/configure.ac (AM_CPPFLAGS)
	(XSParagraph_la_LIBADD): Refer to Gnulib headers and library.

	* install-info/Makefile.am: Change Gnulib library file from 
	libgnu.a to libgnu.la.

2015-07-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/Makefile.am (LDADD): Change Gnulib library file from 
	libgnu.a to libgnu.la.
	* man/Makefile.am (mi_perl5lib_path): Look for produced library 
	in builddir.

2015-07-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/mylib/xspara.c (hello): Use
	locale from environment if it is suitable.

2015-07-11  Eli Zaretskii  <eliz@gnu.org>

	* tp/Texinfo/Convert/XSParagraph/mylib/xspara.c (xspara_add_text):
	Use dTHX to avoid perl error about undefined "my_perl" due to
	Perl's "free" being used.

2015-07-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* run gnulib-tool --add-import --libtool at top level
	* configure.ac (LT_INIT): Use.

2015-07-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/mylib/xspara.c (xspara_hello):
	Use dTHX to avoid perl error about undefined "my_perl" due to 
	Perl's "malloc" being used.
	
2015-07-11  Eli Zaretskii  <eliz@gnu.org>
